--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -2,7 +2,7 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  @media screen and (min-width: $desktop) {
+  @include respond-above($desktop) {
     padding-top: 94px;
     padding-bottom: 94px;
   }
@@ -14,7 +14,7 @@
   &--service {
     padding-top: 0;
 
-    @media screen and (max-width: $desktop - 1px) {
+    @include respond-below($desktop) {
       display: none;
     }
   }
