--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,7 +6,7 @@
   text-decoration: none;
   color: $accent-color;
 
-  @media screen and (min-width: 1200px) {
+  @include respond-above($desktop) {
     font-size: 26px;
     line-height: 1.19;
   }
