--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -21,7 +21,7 @@
     transform: translate(-50%, 0);
   }
 
-  @media screen and (min-width: $tablet) {
+  @include respond-above($tablet) {
     display: none;
   }
 }
@@ -46,7 +46,7 @@
     fill: $accent-color;
   }
 
-  @media screen and (min-width: $tablet) {
+  @include respond-above($tablet) {
     display: none;
   }
 }
