--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,18 +1,19 @@
 .container {
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
 
-  @media screen and (min-width: $mobile) {
-    width: $mobile;
+  @include respond-above($mobile) {
+    max-width: $mobile;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
+  @include respond-above($tablet) {
+    max-width: $tablet;
   }
 
-  @media screen and (min-width: $desktop) {
-    width: $desktop;
+  @include respond-above($desktop) {
+    max-width: $desktop;
   }
 }
