--- a/sass/layout/_page-footer.scss
+++ b/sass/layout/_page-footer.scss
@@ -5,12 +5,12 @@
 }
 
 .page-footer__container {
-  @media screen and (min-width: $tablet) {
+  @include respond-above($tablet) {
     display: flex;
     align-items: baseline;
   }
 
-  @media screen and (min-width: $tablet) and (max-width: $desktop - 1px) {
+  @include respond-between($tablet, $desktop) {
     flex-wrap: wrap;
     justify-content: center;
   }
@@ -22,15 +22,15 @@
 }
 
 .page-footer__social-links {
-  @media screen and (max-width: $tablet - 1px) {
+  @include respond-below($tablet) {
     margin-bottom: 60px;
   }
 
-  @media screen and (min-width: $tablet) {
+  @include respond-above($tablet) {
     flex-basis: 50%;
   }
 
-  @media screen and (min-width: $desktop) {
+  @include respond-above($desktop) {
     flex-basis: 206px;
   }
 }
@@ -41,23 +41,23 @@
   display: block;
   color: $white-text-color;
 
-  @media screen and (max-width: $desktop - 1px) {
+  @include respond-below($desktop) {
     text-align: center;
   }
 }
 
 // Footer Contacts
 .contacts {
-  @media screen and (min-width: $tablet) {
+  @include respond-above($tablet) {
     flex-basis: 50%;
   }
 
-  @media screen and (max-width: $desktop - 1px) {
+  @include respond-below($desktop) {
     margin-bottom: 60px;
     text-align: center;
   }
 
-  @media screen and (min-width: $desktop) {
+  @include respond-above($desktop) {
     flex-basis: 270px;
     margin-right: 30px;
   }
@@ -89,11 +89,11 @@
 
 // Subscription Form
 .subscription-form {
-  @media screen and (min-width: $tablet) {
+  @include respond-above($tablet) {
     flex-basis: 450px;
   }
 
-  @media screen and (min-width: $desktop) {
+  @include respond-above($desktop) {
     flex-basis: 570px;
     margin-left: auto;
     display: flex;
@@ -102,12 +102,12 @@
 }
 
 .subscription-form__field {
-  @media screen and (max-width: $desktop - 1px) {
+  @include respond-below($desktop) {
     margin-bottom: 20px;
     display: block;
   }
 
-  @media screen and (min-width: $desktop) {
+  @include respond-above($desktop) {
     margin-right: 12px;
     flex-grow: 1;
   }
@@ -140,7 +140,7 @@
 .subscription-form__btn-main {
   @extend %flexCenter;
 
-  @media screen and (max-width: $desktop - 1px) {
+  @include respond-below($desktop) {
     margin-left: auto;
     margin-right: auto;
   }
