--- a/sass/layout/_section-features.scss
+++ b/sass/layout/_section-features.scss
@@ -1,27 +1,24 @@
 .feature {
   @extend %list;
 
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -$grid-item-gap / 2;
+  @include respond-above($tablet) {
+    @include grid();
   }
 }
 
 .feature__item {
-  @media screen and (max-width: $tablet - 1px) {
+  @include respond-below($tablet) {
     &:not(:last-child) {
       margin-bottom: $grid-item-gap;
     }
   }
 
-  @media screen and (min-width: $tablet) {
-    flex-basis: calc((100% - 2 * #{$grid-item-gap}) / 2);
-    margin: $grid-item-gap / 2;
+  @include respond-above($tablet) {
+    @include grid-item(2);
   }
 
-  @media screen and (min-width: $desktop) {
-    flex-basis: calc((100% - 4 * #{$grid-item-gap}) / 4);
+  @include respond-above($desktop) {
+    @include grid-item(4);
   }
 }
 
@@ -38,7 +35,7 @@
   @extend %title;
   color: $title-text-color;
 
-  @media screen and (max-width: $tablet - 1px) {
+  @include respond-below($tablet) {
     text-align: center;
   }
 }
