--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,28 +1,57 @@
-// Mobile Menu
-.mobile-menu {
+.mobile-backdrop {
   position: fixed;
   z-index: 1;
   top: 0;
-  left: 50%;
-  transform: translate(-50%, -100%);
+  right: 0;
 
-  width: 100%;
-  max-width: 480px;
-  min-height: 100vh;
-  padding: 48px 40px;
-  display: flex;
-  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
 
-  background-color: $primary-bg-color;
-  box-shadow: $mobile-menu-shadow;
-  transition: transform $modal-animation;
+  background-color: $backdrop-color;
+  overflow-y: scroll;
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility $modal-animation, opacity $modal-animation;
 
   &--is-open {
-    transform: translate(-50%, 0);
+    visibility: visible;
+    opacity: 1;
+    pointer-events: initial;
   }
 
   @include respond-above($tablet) {
     display: none;
+  }
+}
+
+// Mobile Menu
+.mobile-menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+
+  padding-top: 59px;
+  padding-bottom: 36px;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  background-color: $primary-bg-color;
+  box-shadow: $mobile-menu-shadow;
+  border-bottom-left-radius: 4px;
+  transition: transform $modal-animation;
+
+  @include respond-above($mobile) {
+    width: calc(286px + (100% - #{$mobile}) / 2);
+  }
+
+  .mobile-backdrop--is-open & {
+    transform: scaleX(1);
   }
 }
 
@@ -33,6 +62,8 @@
   top: 10px;
   right: 15px;
 
+  width: 40px;
+  height: 40px;
   padding: 0;
 
   fill: $title-text-color;
@@ -68,76 +99,62 @@
 // Mobile Site Navigation
 .mobile-site-nav {
   @extend %list;
-  margin-bottom: 64px;
-}
-
-.mobile-site-nav__item:not(:last-child),
-.mobile-contacts__item:not(:last-child) {
   margin-bottom: 32px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 59px;
+    left: 0;
+
+    width: 100%;
+    height: 1px;
+    display: block;
+    background-color: $header-border-color;
+  }
 }
 
 .mobile-site-nav__link {
   @extend %link;
-  font-size: 40px;
-  line-height: 1.175;
+  padding-top: 16px;
+  padding-bottom: 14px;
+  display: inline-block;
+  font-size: 20px;
+  line-height: 1.176;
 
   &--active {
+    position: relative;
     color: $accent-color;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+
+      width: 100%;
+      height: 4px;
+      display: block;
+
+      background-color: $accent-color;
+      border-radius: 2px;
+    }
   }
 }
 
 // Mobile Contacts
 .mobile-contacts {
   @extend %list;
-  margin-top: auto;
-  margin-bottom: 64px;
+  margin-bottom: 10px;
 }
 
-.mobile-contacts__tel {
+.mobile-contacts__link {
   @extend %link;
-  font-size: 34px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: block;
+
+  font-size: 16px;
   line-height: 1.176;
-  color: $accent-color;
-}
-
-.mobile-contacts__mail {
-  @extend %link;
-  font-size: 24px;
-  line-height: 1.166;
   color: $primary-text-color;
-}
-
-// Mobile Social Links
-.mobile-social {
-  @extend %list;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.mobile-social__item {
-  position: relative;
-
-  &:not(:last-child) {
-    margin-right: 20px;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0px;
-      right: -10px;
-      width: 22px;
-      height: 1px;
-      display: block;
-      transform-origin: right;
-      transform: rotate(-90deg);
-      background-color: rgba(33, 33, 33, 0.2);
-    }
-  }
-}
-
-.mobile-social__link {
-  @extend %link;
-  font-size: 18px;
-  line-height: 1.22;
-  color: $accent-color;
 }
