--- a/sass/components/_modal-box.scss
+++ b/sass/components/_modal-box.scss
@@ -4,8 +4,8 @@
   top: 0;
   left: 0;
 
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   background-color: $backdrop-color;
   overflow-y: scroll;
