--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -55,7 +55,9 @@
     &::after {
       content: "";
       position: absolute;
+      left: 0;
       bottom: -1px;
+
       width: 100%;
       height: 4px;
       display: block;
