--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -70,11 +70,13 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  transition: fill $animation;
+  transform: scale(1);
+  transition: fill $animation, transform $animation;
 
   &:hover,
   &:focus {
     fill: $accent-color;
+    transform: scale(1.1);
   }
 
   @include respond-above($tablet) {
