--- a/sass/layout/_section-clients.scss
+++ b/sass/layout/_section-clients.scss
@@ -26,11 +26,13 @@
   border: 1px solid $icon-color;
   border-radius: 4px;
   outline: none;
-  transition: fill $animation, border-color $animation;
+  transform: scale(1);
+  transition: fill $animation, border-color $animation, transform $animation;
 
   &:hover,
   &:focus {
     fill: $accent-color;
     border-color: $accent-color;
+    transform: scale(1.04);
   }
 }
