Fix modal box position

--- a/css/main.css
+++ b/css/main.css
@@ -435,14 +435,22 @@ img {
 @media screen and (min-width: 480px) {
   .modal {
     position: absolute;
-    top: 50%;
+    top: 94px;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%) scaleX(1);
-            transform: translate(-50%, -50%) scaleX(1);
+    -webkit-transform: translate(-50%, 0) scaleX(1);
+            transform: translate(-50%, 0) scaleX(1);
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    top: 208px;
   }
 }
 @media screen and (min-width: 1200px) {
   .modal {
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%) scaleX(1);
+            transform: translate(-50%, -50%) scaleX(1);
     max-width: 528px;
     min-height: 580px;
   }
@@ -452,6 +460,12 @@ img {
           transform: translate(0, 50%) scaleX(0);
 }
 @media screen and (min-width: 480px) {
+  .backdrop--is-hidden .modal {
+    -webkit-transform: translate(-50%, 50%) scaleX(0);
+            transform: translate(-50%, 50%) scaleX(0);
+  }
+}
+@media screen and (min-width: 1200px) {
   .backdrop--is-hidden .modal {
     -webkit-transform: translate(-50%, 0) scaleX(0);
             transform: translate(-50%, 0) scaleX(0);
